docs: Criando documentação para o recurso Contact
