# app/Http/Requests/Contact/ContactRequest.php
@@ -6,6 +6,17 @@ use App\Enums\ContactStatus;
 use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Validation\Rule;
 
+/**
+ * @OA\Schema(
+ *      schema="ContactRequest",
+ *      required={"name", "email", "subject", "message", "status"},
+ *      @OA\Property(property="name", type="string", example="João", minLength=2, maxLength=255),
+ *      @OA\Property(property="email", type="string", example="joao@email.com", minLength=3, maxLength=255),
+ *      @OA\Property(property="subject", type="string", example="Oferta de emprego", minLength=3, maxLength=255),
+ *      @OA\Property(property="message", type="string", example="<p>Boa tarde!</p><p>Tenho uma oferta de emprego para você</p>", minLength=4),
+ *      @OA\Property(property="status", ref="#/components/schemas/ContactStatusEnum")
+ * )
+ */
 class ContactRequest extends FormRequest
 {
     /**
